[package]
name = "pok-server"
version = "0.1.0"
authors = ["Filippo Biondi <filippo.biondi@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.0.0"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"