[package]
name = "pok-server"
version = "0.1.0"
authors = ["Filippo Biondi <filippo.biondi@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono", "numeric"] }
bigdecimal = {version = "0.1.2", features = ["serde"] }
uuid = {version = "0.8.1", features = ["serde"] }
futures = "0.3.1"
r2d2 = "0.8.8"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
dotenv = "0.15.0"
actix-rt = "1.0.0"
geoutils = "0.4.0"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
jsonwebtoken = "7.2.0"